# demo_doab_local

./: README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/data/: loader.py
app/db/: models.py  repository.py  session.py
app/eval/: pipeline.py
app/eval/metrics/: mock.py
app/models/: registry.py
app/ui/: dashboard.py
doc_000000/: page_texts.json
doc_000001/: page_texts.json
doc_000002/: page_texts.json
doc_000003/: page_texts.json
doc_000004/: page_texts.json
